--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
             </a>
             <div class="separator"></div>
 
-            <a href="mailto:fettucine@gmail.com" class="topbar-item link">
+            <a href="mailto:fettuccinepastaa16@gmail.com" class="topbar-item link">
                 <div class="icon">
                     <ion-icon name="mail-outline" aria-hidden="true"></ion-icon>
                 </div>
-                <span class="span">fettucine@gmail.com</span>
+                <span class="span">fettuccinepastaa16@gmail.com</span>
             </a>
         </div>
     </div>
@@ -116,7 +116,7 @@
                          No:86A D:C, 16110 Ni̇lüfer/Bursa
                     </address>
                     <p class="body-4 navbar-text">Açık: 12.00 - 21.30</p>
-                    <a href="mailto:fettucine@gmail.com" class="body-4 sidebar-link">fettucine@gmail.com</a>
+                    <a href="mailto:fettuccinepastaa16@gmail.com" class="body-4 sidebar-link">fettuccinepastaa16@gmail.com</a>
                     <div class="separator"></div>
                     <p class="contact-label">Rezervasyon Talebi</p>
                     <a href="tel:+905421450516" class="body-1 contact-number hover-underline">+90 (542) 145 05 16</a>
@@ -618,7 +618,7 @@
                         Esentepe, Fatih Sultan Mehmet Blv.  <br>
                          No:86A D:C, 16110 Ni̇lüfer/Bursa
                     </address>
-                    <a href="mailto:fettucine@gmail.com" class="body-4 contact-link">fettucine@gmail.com</a>
+                    <a href="mailto:fettuccinepastaa16@gmail.com" class="body-4 contact-link">fettuccinepastaa16@gmail.com</a>
 
                     <a href="tel:+905421450516" class="body-4 contact-link">Rezervasyon Talebi: +90 (542) 145 05 16</a>
 
