--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                         <li>
                             <div class="menu-card hover:card">
                                 <figure class="card-banner img-holder" style="--width: 100;  --height: 100;">
-                                    <img src="./img/makarna-2.JPG" width="100" height="100" class="img-cover" loading="lazy"  alt="Alfredo">
+                                    <img src="./img/makarna-3.JPG" width="100" height="100" class="img-cover" loading="lazy"  alt="Alfredo">
                                 </figure>
 
                                 <div>
@@ -373,7 +373,7 @@
                         <li>
                             <div class="menu-card hover:card">
                                 <figure class="card-banner img-holder" style="--width: 100;  --height: 100;">
-                                    <img src="./img/makarna.JPG" width="100" height="100" class="img-cover" loading="lazy"  alt="Bolonez">
+                                    <img src="./img/makarna-2.JPG" width="100" height="100" class="img-cover" loading="lazy"  alt="Bolonez">
                                 </figure>
 
                                 <div>
@@ -397,7 +397,7 @@
                         <li>
                             <div class="menu-card hover:card">
                                 <figure class="card-banner img-holder" style="--width: 100;  --height: 100;">
-                                    <img src="./img/makarna-2.JPG" width="100" height="100" class="img-cover" loading="lazy"  alt="Napoliten">
+                                    <img src="./img/makarna-3.JPG" width="100" height="100" class="img-cover" loading="lazy"  alt="Napoliten">
                                 </figure>
 
                                 <div>
